# AgenticEHR

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: unittest_results.txt
artifacts/femr_dummy/: events.csv  labels.csv
artifacts/models/: xgboost.joblib
artifacts/responses/mimic/: claude-baseline_22907166.json  claude-baseline_22907166.md  claude-baseline_23145720.json  claude-baseline_23145720.md  claude-baseline_27526053.json  claude-baseline_27526053.md  claude-baseline_27759377.json  claude-baseline_27759377.md  claude-baseline_29079034.json  claude-baseline_29079034.md  claude_22907166.json  claude_22907166.md  claude_23145720.json  claude_23145720.md  claude_27526053.json  claude_27526053.md  claude_27759377.json  claude_27759377.md  claude_29079034.json  claude_29079034.md
config/: default.yaml  femr_dummy.yaml  mimic.yaml  mimic_los_long.yaml  mimic_mortality.yaml
docs/: work-log.md
src/agentic_ehr/: __init__.py  cli.py  config.py  logging_utils.py  pipeline.py
src/agentic_ehr/agent/: __init__.py  baseline.py  llm_backend.py  summary_agent.py  templates.py
src/agentic_ehr/data/: __init__.py  dataset.py  featurize.py  make_femr_dummy.py  schema.py  synthetic.py
src/agentic_ehr/data/mimic/: __init__.py  build.py  concepts.py  io.py  multitask.py  service.py  tasks.py
src/agentic_ehr/eval/: __init__.py  model_eval.py  response_log.py  summary_eval.py
src/agentic_ehr/explain/: __init__.py  attributions.py  concept_map.py  risk_profile.py
src/agentic_ehr/models/: __init__.py  base.py  registry.py  xgboost_classifier.py  xgboost_model.py  xgboost_regression.py
