[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ehr"
version = "0.1.0"
description = "Agentic wrapper over EHR risk models that produces patient-friendly health summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "google-genai>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
explain = ["shap>=0.44"]
openai = ["openai>=1.40"]
mimic = ["duckdb>=1.0", "pyarrow>=14.0"]
dev = ["pytest>=8.0"]

[project.scripts]
agentic-ehr = "agentic_ehr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
